# MIT License
#
# Copyright (c) 2024 Google LLC
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load("//cc_toolchain/features:cc_toolchain_import.bzl", "cc_toolchain_import")
load(":toolchain_config.bzl", "cc_toolchain_config")

MAC_TOOLS = {
    "gcc": "wrappers/darwin/gcc",
    "cpp": "wrappers/darwin/cpp",
    "ld": "wrappers/darwin/ld",
    "ar": "wrappers/darwin/ar",
    "gcov": "wrappers/darwin/idle",
    "llvm-cov": "wrappers/darwin/idle",
    "nm": "wrappers/darwin/idle",
    "objdump": "wrappers/darwin/idle",
    "strip": "wrappers/darwin/idle",
}

######################################################################
# Tools: Linux x86_64, Sysroot: Linux x86_64
######################################################################

alias(
    name = "startup_libs_lx64",
    actual = "@sysroot_linux_x86_64//:startup_libs",
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_lx64_lx64",
    deps = [
        "@sysroot_linux_x86_64//:includes_c",
        "@llvm_linux_x86_64//:clang_includes",
        "@sysroot_linux_x86_64//:includes_system",
        "@sysroot_linux_x86_64//:glibc",
        "@sysroot_linux_x86_64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_lx64_lx64",
    srcs = [
        ":imports_lx64_lx64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_lx64",
        "@llvm_linux_x86_64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_lx64_lx64",
    srcs = [
        ":imports_lx64_lx64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:clang",
        "@llvm_linux_x86_64//:clang++",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_lx64_lx64",
    srcs = [
        ":compiler_lx64_lx64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ld",
        "@sysroot_linux_x86_64//:startup_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_lx64_lx64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ar",
    ],
)

cc_toolchain(
    name = "toolchain_lx64_lx64",
    all_files = ":all_lx64_lx64",
    ar_files = ":ar_lx64_lx64",
    compiler_files = ":compiler_lx64_lx64",
    dwp_files = ":all_lx64_lx64",
    linker_files = ":linker_lx64_lx64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_lx64_lx64",
    toolchain_identifier = "toolchain_lx64_lx64_id",
)

cc_toolchain_config(
    name = "toolchain_config_lx64_lx64",
    archiver = "@llvm_linux_x86_64//:ar",
    c_compiler = "@llvm_linux_x86_64//:clang",
    cc_compiler = "@llvm_linux_x86_64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_lx64_lx64",

        # Toolchain configuration
        "//cc_toolchain/features:garbage_collect_symbols",
        "//cc_toolchain/features:warnings",
        "//cc_toolchain/features:errors",
        "//cc_toolchain/features:reproducible",
        "//cc_toolchain/features:language",
        "//cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_lx64",
        "//cc_toolchain/features:dbg",
        "//cc_toolchain/features:opt",
        "//cc_toolchain/features:fastbuild",
        "//cc_toolchain/features:position_independent_code",
        "//cc_toolchain/features:supports_pic",
        "//cc_toolchain/features:startup_libs_lx64",
        "//cc_toolchain/features:coverage",

        # C++ standard configuration
        "//cc_toolchain/features:c++11",
        "//cc_toolchain/features:c++14",
        "//cc_toolchain/features:c++17",
    ],
    linker = "@llvm_linux_x86_64//:ld",
    target_cpu = "x86_64",
    target_system_name = "local",
)

toolchain(
    name = "lx64_lx64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_settings = ["//config:hermetic_cc_on"],
    toolchain = ":toolchain_lx64_lx64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: Linux x86_64, Sysroot: Linux aarch64
######################################################################

alias(
    name = "startup_libs_la64",
    actual = "@sysroot_linux_aarch64//:startup_libs",
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_lx64_la64",
    deps = [
        "@sysroot_linux_aarch64//:includes_c",
        "@llvm_linux_x86_64//:clang_includes",
        "@sysroot_linux_aarch64//:includes_system",
        "@sysroot_linux_aarch64//:glibc",
        "@sysroot_linux_aarch64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_lx64_la64",
    srcs = [
        ":imports_lx64_la64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_la64",
        "@llvm_linux_x86_64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_lx64_la64",
    srcs = [
        ":all_lx64_la64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:clang",
        "@llvm_linux_x86_64//:clang++",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_lx64_la64",
    srcs = [
        ":compiler_lx64_la64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ld",
        "@sysroot_linux_aarch64//:startup_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_lx64_la64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ar",
    ],
)

cc_toolchain(
    name = "toolchain_lx64_la64",
    all_files = ":all_lx64_la64",
    ar_files = ":ar_lx64_la64",
    compiler_files = ":compiler_lx64_la64",
    dwp_files = ":all_lx64_la64",
    linker_files = ":linker_lx64_la64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_lx64_la64",
    toolchain_identifier = "toolchain_id_lx64_la64",
)

cc_toolchain_config(
    name = "toolchain_config_lx64_la64",
    archiver = "@llvm_linux_x86_64//:ar",
    c_compiler = "@llvm_linux_x86_64//:clang",
    cc_compiler = "@llvm_linux_x86_64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_lx64_la64",

        # Toolchain configuration
        "//cc_toolchain/features:garbage_collect_symbols",
        "//cc_toolchain/features:warnings",
        "//cc_toolchain/features:errors",
        "//cc_toolchain/features:reproducible",
        "//cc_toolchain/features:language",
        "//cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_la64",
        "//cc_toolchain/features:dbg",
        "//cc_toolchain/features:opt",
        "//cc_toolchain/features:fastbuild",
        "//cc_toolchain/features:position_independent_code",
        "//cc_toolchain/features:supports_pic",
        "//cc_toolchain/features:startup_libs_la64",
        "//cc_toolchain/features:coverage",

        # C++ standard configuration
        "//cc_toolchain/features:c++11",
        "//cc_toolchain/features:c++14",
        "//cc_toolchain/features:c++17",
    ],
    linker = "@llvm_linux_x86_64//:ld",
    target_cpu = "aarch64",
    target_system_name = "local",
)

# buildifier: leave-alone
toolchain(
    name = "lx64_la64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_settings = ["//config:hermetic_cc_on"],
    toolchain = ":toolchain_lx64_la64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: Linux x86_64, Sysroot: macOS aarch64
######################################################################

alias(
    name = "startup_libs_ma64",
    actual = "@sysroot_macos_aarch64//:startup_libs",
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_lx64_ma64",
    deps = [
        "@sysroot_macos_aarch64//:includes_c",
        "@llvm_linux_x86_64//:clang_includes",
        "@sysroot_macos_aarch64//:includes_system",
        "@sysroot_macos_aarch64//:glibc",
        "@sysroot_macos_aarch64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_lx64_ma64",
    srcs = [
        ":imports_lx64_ma64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_ma64",
        "@llvm_linux_x86_64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_lx64_ma64",
    srcs = [
        ":all_lx64_ma64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:clang",
        "@llvm_linux_x86_64//:clang++",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_lx64_ma64",
    srcs = [
        ":compiler_lx64_ma64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ld",
        "@sysroot_macos_aarch64//:startup_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_lx64_ma64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ar_darwin",
    ],
)

cc_toolchain(
    name = "toolchain_lx64_ma64",
    all_files = ":all_lx64_ma64",
    ar_files = ":ar_lx64_ma64",
    compiler_files = ":compiler_lx64_ma64",
    dwp_files = ":all_lx64_ma64",
    linker_files = ":linker_lx64_ma64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_lx64_ma64",
    toolchain_identifier = "toolchain_id_lx64_ma64",
)

cc_toolchain_config(
    name = "toolchain_config_lx64_ma64",
    archiver = "@llvm_linux_x86_64//:ar_darwin",
    c_compiler = "@llvm_linux_x86_64//:clang",
    cc_compiler = "@llvm_linux_x86_64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_lx64_ma64",
        "//cc_toolchain/features:undefined_symbols",

        # Toolchain configuration
        #"//cc_toolchain/features:garbage_collect_symbols",      # error: ld64.lld: error: unknown argument '--gc-sections'
        "//cc_toolchain/features:warnings",
        "//cc_toolchain/features:errors",
        "//cc_toolchain/features:reproducible",
        "//cc_toolchain/features:language",
        "//cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_ma64",
        "//cc_toolchain/features:dbg",
        "//cc_toolchain/features:opt",
        "//cc_toolchain/features:fastbuild",
        "//cc_toolchain/features:position_independent_code",
        "//cc_toolchain/features:supports_pic",
        "//cc_toolchain/features:startup_libs_ma64",
        "//cc_toolchain/features:coverage",

        # C++ standard configuration
        "//cc_toolchain/features:c++11",
        "//cc_toolchain/features:c++14",
        "//cc_toolchain/features:c++17",
    ],
    dynamic_library_extension = ".dylib",
    install_name = "@llvm_linux_x86_64//:install_name_tool_darwin",
    linker = "@llvm_linux_x86_64//:ld",
    target_cpu = "aarch64",
    target_libc = "macosx",
    target_system_name = "local",
    tool_paths = MAC_TOOLS,
)

# buildifier: leave-alone
toolchain(
    name = "lx64_ma64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_settings = ["//config:hermetic_cc_on"],
    toolchain = ":toolchain_lx64_ma64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: macOS aarch64, Sysroot: macOS aarch64
######################################################################

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_ma64_ma64",
    deps = [
        "@sysroot_macos_aarch64//:includes_c",
        "@llvm_macos_aarch64//:clang_includes",
        "@sysroot_macos_aarch64//:includes_system",
        "@sysroot_macos_aarch64//:glibc",
        "@sysroot_macos_aarch64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_ma64_ma64",
    srcs = [
        ":imports_ma64_ma64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_ma64",
        "@llvm_macos_aarch64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_ma64_ma64",
    srcs = [
        ":all_ma64_ma64",
        "//cc_toolchain/wrappers:all",
        "@llvm_macos_aarch64//:clang",
        "@llvm_macos_aarch64//:clang++",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_ma64_ma64",
    srcs = [
        ":compiler_ma64_ma64",
        "//cc_toolchain/wrappers:all",
        "@llvm_macos_aarch64//:ld",
        "@sysroot_macos_aarch64//:startup_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_ma64_ma64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_macos_aarch64//:ar",
    ],
)

cc_toolchain(
    name = "toolchain_ma64_ma64",
    all_files = ":all_ma64_ma64",
    ar_files = ":ar_ma64_ma64",
    compiler_files = ":compiler_ma64_ma64",
    dwp_files = ":all_ma64_ma64",
    linker_files = ":linker_ma64_ma64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_ma64_ma64",
    toolchain_identifier = "toolchain_id_ma64_ma64",
)

cc_toolchain_config(
    name = "toolchain_config_ma64_ma64",
    archiver = "@llvm_macos_aarch64//:ar",
    c_compiler = "@llvm_macos_aarch64//:clang",
    cc_compiler = "@llvm_macos_aarch64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_ma64_ma64",
        "//cc_toolchain/features:undefined_symbols",

        # Toolchain configuration
        #"//cc_toolchain/features:garbage_collect_symbols",      # error: ld64.lld: error: unknown argument '--gc-sections'
        "//cc_toolchain/features:warnings",
        "//cc_toolchain/features:errors",
        "//cc_toolchain/features:reproducible",
        "//cc_toolchain/features:language",
        "//cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_ma64",
        "//cc_toolchain/features:dbg",
        "//cc_toolchain/features:opt",
        "//cc_toolchain/features:fastbuild",
        "//cc_toolchain/features:position_independent_code",
        "//cc_toolchain/features:supports_pic",
        "//cc_toolchain/features:startup_libs_ma64",
        "//cc_toolchain/features:coverage",

        # C++ standard configuration
        "//cc_toolchain/features:c++11",
        "//cc_toolchain/features:c++14",
        "//cc_toolchain/features:c++17",
    ],
    dynamic_library_extension = ".dylib",
    install_name = "@llvm_macos_aarch64//:install_name_tool_darwin",
    linker = "@llvm_macos_aarch64//:ld",
    target_cpu = "aarch64",
    target_libc = "macosx",
    target_system_name = "local",
    tool_paths = MAC_TOOLS,
)

# buildifier: leave-alone
toolchain(
    name = "ma64_ma64",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_settings = ["//config:hermetic_cc_on"],
    toolchain = ":toolchain_ma64_ma64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
