load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("//features:features.bzl", "cc_toolchain_import_feature")

package(
    default_visibility = ["//visibility:public"],
)

bool_flag(
    name = "hermetic_cc",
    build_setting_default = True,
)

config_setting(
    name = "hermetic_cc_on",
    flag_values = {
        ":hermetic_cc": "True",
    },
)

platform(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

platform(
    name = "macos_aarch64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

# This is a placeholder to signify an empty dependency.
cc_toolchain_import_feature(
    name = "empty",
)
