load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library", "cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

#############################################
# C
cc_binary(
    name = "hello_world_c",
    srcs = ["hello_world.c"],
)

#############################################
# C++
cc_binary(
    name = "hello_world",
    srcs = ["hello_world.cc"],
)

cc_test(
    name = "hello_world_test",
    srcs = ["hello_world.cc"],
)

#############################################
# C++ library
cc_library(
    name = "echo",
    srcs = ["echo.cc"],
    hdrs = ["echo.h"],
    alwayslink = True,
)

cc_binary(
    name = "echo_dynamic",
    linkshared = True,
    deps = [":echo"],
)

cc_import(
    name = "echo_import",
    hdrs = ["echo.h"],
    shared_library = ":echo_dynamic",
)

cc_binary(
    name = "echo_usage",
    srcs = [
        "echo_usage.cc",
        ":echo_dynamic",
    ],
    deps = [":echo_import"],
)

cc_test(
    name = "echo_test",
    srcs = [
        "echo_test.cc",
        ":echo_dynamic",
    ],
    deps = [":echo_import"],
)

#############################################
# C++ and Google Protobuf
cc_binary(
    name = "hello_protobuf",
    srcs = ["hello_protobuf.cc"],
    deps = ["//tests/protobuf:hello_proto_lib"],
)

cc_test(
    name = "hello_protobuf_test",
    srcs = ["hello_protobuf.cc"],
    deps = ["//tests/protobuf:hello_proto_lib"],
)

#############################################
# C++ and Abseil
cc_binary(
    name = "hello_absl",
    srcs = ["hello_absl.cc"],
    deps = [
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "hello_absl_test",
    srcs = ["hello_absl.cc"],
    deps = [
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings",
    ],
)

#############################################
# Hermetic CC Toolchain Ultimate Test

# Execution platform rules
cc_binary(
    name = "protogen",
    srcs = ["protogen.cc"],
    #linkopts = ["-Wl,-undefined,dynamic_lookup"],
    linkshared = True,
    deps = ["@pybind11"],
)

genrule(
    name = "protogen_so",
    srcs = [":protogen"],
    outs = ["protogen.so"],
    cmd = "cp $(location :protogen) $@",
)

py_binary(
    name = "protogen_tool",
    srcs = ["protogen_tool.py"],
    #args = [
    #    "-f /tmp/my.proto",
    #],
    data = [":protogen.so"],
)

genrule(
    name = "my_proto",
    outs = [
        "my.proto",
    ],
    cmd = "$(location :protogen_tool) -f $@",
    tools = [":protogen_tool"],
)

proto_library(
    name = "my_proto_library",
    srcs = [":my_proto"],
)

# Target platform rules
cc_proto_library(
    name = "my_proto_library_cc",
    deps = [":my_proto_library"],
)

cc_binary(
    name = "protoclient",
    srcs = ["protoclient.cc"],
    #linkopts = ["-Wl,-undefined,dynamic_lookup"],
    linkshared = True,
    linkstatic = True,
    deps = [
        ":my_proto_library_cc",
        "@com_google_protobuf//:protobuf",
        "@pybind11",
    ],
)

genrule(
    name = "protoclient_so",
    srcs = [":protoclient"],
    outs = ["protoclient.so"],
    cmd = "cp $(location :protoclient) $@",
)

py_binary(
    name = "protoclient_tool",
    srcs = ["protoclient_tool.py"],
    data = [":protoclient.so"],
    deps = [],
)
